# ouchn-scrap

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
docs/superpowers/specs/: 2026-05-11-formative-download-filename-design.md
src/: browser.py  session.py  stealth.py
src/download_formative/: course_handle.py  download.py  index.py
